--- a/css/style.css
+++ b/css/style.css
@@ -56,10 +56,6 @@ body {
     color: #464646;
 }
 
-main {
-    margin-bottom: 77px;
-}
-
 h1,
 h2 {
     font-size: 47px;
@@ -187,6 +183,7 @@ textarea:invalid
 .breadcrumbs-list
 {
     margin: 0;
+    margin-left: 60px;
     padding: 0;
 
     list-style: none;
@@ -194,13 +191,18 @@ textarea:invalid
 
 .breadcrumbs-item {
     display: inline-block;
+
+    position: relative;
+    padding-right: 39px;
+    letter-spacing: 0;
+    word-spacing: -12px;
 }
 
 .breadcrumbs-item::after {
     content: "";
     position: absolute;
-    right: 18px;
-    bottom: 5px;
+    right: 24px;
+    bottom: 13px;
     width: 7px;
     height: 7px;
     background-position: -4px -403px;
@@ -223,14 +225,74 @@ textarea:invalid
 /* Pagination */
 
 .pagination__list {
+    position: relative;
+
+    display: flex;
+    justify-content: center;
+
     margin: 0;
     padding: 0;
+    min-height: 20px;
+    margin-bottom: 73px;
+    padding-top: 25px;
+    padding-right: 125px;
+    padding-bottom: 25px;
+    padding-left: 125px;
 
     list-style: none;
+    font-size: 0;
+    text-align: center;
+
+    background-color: #ebebeb;
 }
 
-.pagination__item {
-    display: inline-block;
+.pagination__item:not(:first-child):not(:last-child) {
+    margin-right: 12px;
+    margin-left: 12px;
+    font-size: 14px;
+}
+
+.pagination__item:first-child,
+.pagination__item:last-child
+{
+    width: 130px;
+    height: 70px;
+}
+
+.pagination {
+    margin-top: 50px;
+    width: 760px;
+    min-height: 70px;
+}
+
+.pagination__item-link,
+.pagination__item-link {
+    font-family: "Gilroy ExtraBold","Arial",sans-serif;
+    font-size: 16px;
+    vertical-align: baseline;
+    color: rgba(0, 0, 0, 0.3);
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 3.5px;
+}
+
+.pagination__item-back,
+.pagination__item-forward {
+    position: absolute;
+
+    width: 115px;
+    height: 70px;
+    color: #000000;
+}
+
+.pagination__item-back {
+    top: 0;
+    left: 0;
+}
+
+.pagination__item-forward {
+    top: 0;
+    right: 0;
 }
 
 /* Modal Window */
@@ -345,8 +407,13 @@ Global site Header block
     border: 1px solid transparent;
     
     background: linear-gradient(to bottom, white 10%, transparent 10%, transparent 20%, #f7e296 20%);
+}
 
-    /*outline: 1px green solid;*/
+.page-header_catalog {
+    min-height: 226px;
+    margin-bottom: 47px;
+
+    background: linear-gradient(to bottom, white 5%, transparent 5%, transparent 17%, #f7e296 17%);
 }
 
 .page-header-wrapper {
@@ -734,9 +801,15 @@ Global site Footer block
 ***/
 
 .page-footer {
+    margin-top: 77px;
     padding-top: 13px;
     min-height: 323px;
     background: #464646;
+}
+
+.page-footer_catalog {
+    margin-top: 35px;
+    padding-top: 19px;
 }
 
 .page-footer .page-footer__menu-link {
@@ -1503,7 +1576,13 @@ catalog.html page styles
 
 ***/
 
-.catalog-title {}
+.catalog-title {
+    margin-left: 60px;
+}
+
+.products {
+    margin-top: 41px;
+}
 
 .products__sort-list,
 .products__items-filter-colors {
@@ -1561,17 +1640,37 @@ catalog.html page styles
 }
 
 .products__titles {
+    height: 69px;
     background: #dbdbdb;
+    background: linear-gradient(to right, #dbdbdb 36.6%, #ebebeb 36.6%, #ebebeb 100%);
+}
+
+.products__titles .container {
+    display: flex;
 }
 
 .products__filter-title {
-    width: 268px;
+    width: 328px;
 
     font-size: 16px;
 }
 
+.products__filter-title,
+.products__sort-title
+{
+    margin: 0 0 0 60px;
+    padding-right: 68px;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: .23em;
+    float: left;
+    width: 278px;
+    padding-top: 21px;
+}
+
 .products__sort {
     display: flex;
+    margin-top: 20px;
 
     align-items: center;
 
@@ -1617,20 +1716,18 @@ catalog.html page styles
 }
 
 .products__sort-type-icon-down {
-right: 10px;
+    right: 10px;
 }
 
-.products__titles .container {
-    display: flex;
-
-}
 
 .products__items .container {
     display: flex;
 }
 
 .products__items-filter {
-    width: 268px;
+    width: 338px;
+    margin-top: 69px;
+    margin-left: 45px;
 }
 
 .products__items-container {
@@ -1647,12 +1744,13 @@ right: 10px;
     width: 360px;
     height: 65px;
     min-height: 440px;
-    margin-top: 60px;
+    margin-top: 70px;
 }
 
 .products__items-item-description {
     display: flex;
     justify-content: space-between;
+    margin-top: 20px;
 }
 
 .products__items-item-link {
@@ -1667,6 +1765,30 @@ right: 10px;
 .products__items-item-container {
     margin: 0;
     padding: 0;
+}
+
+.products__items-item-container_new {
+    position: relative;
+}
+
+.products__items-item-container_new::before {
+    position: absolute;
+    top: 26px;
+    right: 27px;
+
+    width: 60px;
+    height: 59px;
+    padding: 14px 4px;
+    border: 2px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+
+    font-size: 14px;
+    font-family: "Gilroy ExtraBold", "Arial", sans-serif;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.2);
+    letter-spacing: 1px;
+
+    content: "NEW";
 }
 
 .products__items-item:nth-of-type(2n) {
@@ -1725,54 +1847,61 @@ right: 10px;
     opacity: 0.3;
 }
 
-/* Catalog items - mask functionality */
-
-.products__titles {
-    background: linear-gradient(to right, #dbdbdb 30%, #ebebeb 30%, #ebebeb 100%);
-
-    /*outline: 1px dashed green;*/
-}
-
 .products__items-filter {
     /*outline: 1px dashed green;*/
 }
 
 .products__items {
-    background: linear-gradient(to right, #ebebeb 30%, #ffffff 30%, #ffffff 100%);
+    background: linear-gradient(to right, #ebebeb 36.6%, #ffffff 36.6%, #ffffff 100%);
 }
 
 .products__items-filter-container {
     border: none;
-    margin-bottom: 40px;
+    margin-bottom: 57px;
 }
 
 .products__items-filter-title {
     position: relative;
 
     width: 100%;
-    margin-bottom: 18px;
+    margin-bottom: 25px;
     padding-top: 11px;
 
     font-size: 18px;
     font-family: "Gilroy ExtraBold","Arial",sans-serif;
-    color: #000;
+    color: #000000;
+}
+
+.products__items-filter-container:nth-of-type(2) .products__items-filter-title,
+.products__items-filter-container:nth-of-type(3) .products__items-filter-title
+{
+    margin-bottom: 18px;
+}
+
+.products__items-filter-container:nth-of-type(2) {
+    margin-bottom: 10px;
+}
+
+.products__items-filter-container:nth-of-type(3) {
+    margin-bottom: 10px;
 }
 
 .products__items-filter-title::before {
     content: '';
 
     position: absolute;
+    top: 1px;
 
-    width: 100%;
+    width: 79%;
     height: 2px;
     background: black;
 }
+
 
 .range-control {
     position: relative;
 
     width: 195px;
-    /*margin-top: 18px;*/
     padding-left: 5px;
 }
 
@@ -1889,55 +2018,4 @@ right: 10px;
     left: 0;
     width: 100%;
     height: 100%;
-}
-
-.pagination {
-    width: 760px;
-    min-height: 70px;
-}
-
-.pagination__list {
-    position: relative;
-
-    display: flex;
-    margin: 0;
-    padding: 0;
-    min-height: 20px;
-    margin-bottom: 73px;
-    padding-top: 25px;
-    padding-right: 125px;
-    padding-bottom: 25px;
-    padding-left: 125px;
-
-    list-style: none;
-    font-size: 0;
-    text-align: center;
-
-    background-color: #ebebeb;
-}
-
-.pagination__item-link,
-.pagination__item-link {
-    font-family: "Gilroy ExtraBold","Arial",sans-serif;
-    font-size: 16px;
-    vertical-align: baseline;
-    color: rgba(0, 0, 0, 0.3);
-    text-transform: uppercase;
-    text-decoration: none;
-    letter-spacing: 3.5px;
-}
-
-.pagination__item-link_btn-back,
-.pagination__item-link_btn-forward {
-    width: 85px;
-    padding: 25px 20px;
-    color: #000000;
-}
-
-.pagination__list .pagination__item:first-of-type {
-    align-self: flex-start;
-}
-.pagination__list .pagination__item:last-of-type {
-    align-self: flex-end;
-    background: red;
 }
